--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
