changed index.js in package.json to server.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mp-monitoring",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
   },
