feat: Add global error handler and improve production readiness
- Added a global error handler to handle uncaught errors gracefully.
- Configured the backend to serve React's production build with a catch-all route.
- Improved CORS configuration for secure frontend-backend communication.
- Ensured proper static file serving for uploads and React build.
- Removed unnecessary console logs for cleaner production output.

--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "concurrently": "^9.1.2"
-  },
   "engines": {
     "node": "18.x"
   }
