--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
