--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "postinstall": "node backend/scripts/initializeAdmin.js"
   },
   "keywords": [],
   "author": "",
