--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "postinstall": "node backend/scripts/initializeAdmin.js"
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
