--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "postinstall": "node scripts/initializeAdmin.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
